# Canonical

./: .gitignore  README.md  build_lean.py
.cargo/: config.toml
.github/workflows/: main.yml
crates/canonical-compat/: Cargo.toml
crates/canonical-compat/src/: ai.rs  compiler.rs  ir.rs  lib.rs  reduction.rs  refine.rs
crates/canonical-compat/static/: index.html
crates/canonical-core/: Cargo.toml
crates/canonical-core/src/: compiler.rs  core.rs  heuristic.rs  lib.rs  memory.rs  print.rs  prover.rs  search.rs  stats.rs
crates/canonical-lean/: Cargo.toml  build.rs
crates/canonical-lean/src/: lib.rs
lean/: Test.lean  debug.json  lakefile.toml
lean/Results/: Destruct.lean  Example.lean  ITP.lean  LeanPrelude.lean  Monomorphize.lean  NNG-Canonical-Answers.lean  NNG-Canonical.lean  Reduction.lean  Simp.lean  Topology.lean
lean/Results/Preprocessing/: Destruct.lean  Monomorphize.lean
static/: index.html
