[package]
name = "canonical_lean"
version.workspace = true
edition.workspace = true

[dependencies]
canonical-compat = { path = "../canonical-compat" }
canonical-core = { path = "../canonical-core" }
once_cell = "1.21.1"
tokio = { version = "1.44.2", features = ["full"] }

[lib]
crate-type = ["cdylib"]
